--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -3,3 +3,6 @@ spring.datasource.username=username
 spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+filestack.api.key = yourApiKey
